# mnemona

./: package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  Layout.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql
src-tauri/src/: db.rs  lib.rs  main.rs  types.rs
src-tauri/src/commands/: courses.rs  departments.rs  mod.rs  schedule.rs  settings.rs  targets.rs  weeks.rs
src/components/: CourseBox.tsx  Module.tsx  Navbar.tsx  ScheduleItem.tsx  TargetBox.tsx  WeekBox.tsx
src/pages/: Course.tsx  Courses.tsx  Dashboard.tsx  Generate.tsx  Settings.tsx
