[package]
name = "Mnemona"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "mnemona_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rand = "0.9.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
uuid = { version = "1.19.0", features = ["v4"] }
